# rusty-raft

./: Cargo.toml  Prusti.toml  README.md
src/: config.rs  lib.rs  log.rs  message.rs  network.rs  raft.rs  spec.rs
src/impl_network/: mod.rs  sharedmemory.rs
src/utils/: list.rs
tests/: comm_closed_test.rs  integration_test.rs
